/*
 * $Id: ChangeLog,v 1.142 2002/03/31 03:29:20 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-03-31 14:00 UTC-0300 Luiz Rafael Culik<culikr@uol.com.br>
  * source/rtl/tbrowse.prg
    * Fixed an problem on SetColumnwidth() method that was Tbrowse not be properly show on screen

2002-03-30 19:23 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/pp.prg
    * Removed few #ifdef __HARBOUR__ around previously non functional __MXRELEASE().

2002-03-30 19:20 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/dbfntx/dbfntx1.c
    * Added 2 missing type casts

2002-03-30 18:37 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbrddntx.h
  * source/rdd/dbfntx/dbfntx1.c
  * source/rtl/set.c
  * source/vm/runner.c
    > Synched with Harbour.

  * source/vm/memvars.c
    > Synched with Harbour.
    + Added void hb_memvarReleasePublic( PHB_ITEM pMemVar ) and static HB_DYNS_FUNC( hb_memvarReleasePublicWorker )
    * Implemented logic for releasing public variables in hb_memvarRelease().

    /* Implementation of RELEASE xVar1 [, xVarN ] ( __MXRELEASE() / __MVXRELEASE() ) is now completed. */

2002-03-30 20:05 UTC+0100 Marek Paliwoda <paliwoda@inetia.pl>
  * xharbour/source/rdd/hbdbsort.c
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
  * xharbour/source/rtl/mlcount.c
  * xharbour/source/rtl/gtcrs/gtcrs.c
  * xharbour/source/rtl/gtcrs/kbdcrs.c
  * xharbour/source/rtl/gtsln/kbsln.c
    * Fixed gcc warnings

2002-03-29 22:42 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.sly
    ! Corrected typo in GetVar (included item belonging to GetVarArray

2002-03-27 02:26 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * include/hbset.h
   * source/rtl/set.c
     * changed definition of HB_SET_AUTORDER from BOOL into int.
     * changed initial value of HB_SET_AUTOPEN to TRUE.
